--- a/src/app/components/LateralMenu/LateralMenu.module.css
+++ b/src/app/components/LateralMenu/LateralMenu.module.css
@@ -10,9 +10,8 @@
   min-width: 250px;
   border-radius: 10px;
   overflow: hidden;
-  background: var(--paper-bg);
+  background: var(--component-background);
   backdrop-filter: blur(14px);
-  border: 0.5px solid rgba(115, 165, 204, 0.1);
 }
 
 .projectActionsContainer {
